feat: add analyzing funs and fix smtogo services
